fixed issue with the last item not being visible even with full scroll

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -155,12 +155,12 @@ div.listingContainer {
 }
 
 .courseListContainer {
-    top: 5em;
     display: flex;
     flex-direction: column;
-    overflow: scroll;
-    max-height: 100vh;
     flex-grow: 2;
+    max-height: 85vh;
+    overflow: scroll;
+    top: 5em;
 }
 
 div.courseListLineItemContainer {
